# web3-valet

./: README.md
frontend/src/components/Chat/: AgentAudioPlayer.tsx  AgentSelector.tsx  ChatView.tsx
mcp-api/: README.md
mcp-api/src/: handlers.rs
mcp-server/: .env.example  .gitignore  README.md
mcp-server/src/: agents.rs  gemini.rs  handlers.rs  main.rs  models.rs
web3-minting/: .env.example  Cargo.toml  README.md
web3-minting/src/: blockchain.rs  handlers.rs  main.rs  models.rs  storage.rs
